--- a/adaptive_energy_gap.ipynb
+++ b/adaptive_energy_gap.ipynb
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "033d660df715414d9a0aee8cb56fea83",
+       "model_id": "3b586155070e4724b6675c21ea4a108f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,59 +66,6 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "-------------------------------------------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
-      "                                                   Name    Self CPU %      Self CPU   CPU total %     CPU total  CPU time avg     Self CUDA   Self CUDA %    CUDA total  CUDA time avg       CPU Mem  Self CPU Mem      CUDA Mem  Self CUDA Mem    # of Calls  \n",
-      "-------------------------------------------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
-      "                                          aten::resize_         0.25%      40.881ms         3.39%     552.542ms     130.594us       0.000us         0.00%       0.000us       0.000us          24 b          24 b       7.79 Gb       7.79 Gb          4231  \n",
-      "                                            aten::empty         0.94%     152.658ms         1.81%     295.807ms      14.211us       0.000us         0.00%       0.000us       0.000us         496 b         496 b       2.20 Gb       2.20 Gb         20815  \n",
-      "                                              aten::mul         0.13%      20.937ms         0.65%     105.249ms      86.839us       8.791ms         2.23%       8.791ms       7.253us           0 b           0 b       2.19 Gb       2.19 Gb          1212  \n",
-      "                                               aten::mm         1.46%     238.982ms        11.29%        1.841s       7.083ms      80.081ms        20.35%      80.081ms     308.004us           0 b           0 b       2.19 Gb       2.19 Gb           260  \n",
-      "                                    aten::empty_strided         0.06%       9.680ms        36.07%        5.885s       6.524ms       0.000us         0.00%       0.000us       0.000us         416 b         416 b     573.59 Mb     573.59 Mb           902  \n",
-      "                                              aten::add         0.01%       1.325ms         0.01%       1.935ms      21.033us     749.000us         0.19%     749.000us       8.141us           0 b           0 b     173.26 Mb     173.26 Mb            92  \n",
-      "                                              aten::sub         0.01%       1.686ms         0.02%       2.458ms      23.864us     320.000us         0.08%     320.000us       3.107us           0 b           0 b      81.78 Mb      81.78 Mb           103  \n",
-      "                                              aten::neg         0.01%       1.575ms         0.01%       2.374ms      23.980us     242.000us         0.06%     242.000us       2.444us           0 b           0 b      78.52 Mb      78.52 Mb            99  \n",
-      "                                               aten::lt         0.13%      20.972ms         0.18%      29.961ms      24.538us       1.640ms         0.42%       1.640ms       1.343us           0 b           0 b      50.64 Mb      50.64 Mb          1221  \n",
-      "                                               aten::gt         0.01%       1.466ms         0.01%       2.163ms      23.511us     318.000us         0.08%     318.000us       3.457us           0 b           0 b      22.26 Mb      22.26 Mb            92  \n",
-      "                                               aten::ge         0.44%      72.461ms         0.57%      92.428ms      33.022us       4.807ms         1.22%       4.807ms       1.717us           0 b           0 b      13.49 Mb      13.49 Mb          2799  \n",
-      "                                              aten::all         0.97%     157.601ms         1.11%     180.671ms      62.494us       8.449ms         2.15%       8.463ms       2.927us           0 b           0 b       1.41 Mb       1.41 Mb          2891  \n",
-      "                                              aten::any         0.28%      45.055ms         0.34%      55.782ms      49.939us       4.300ms         1.09%       4.304ms       3.853us           0 b           0 b     558.50 Kb     558.50 Kb          1117  \n",
-      "                                              aten::div         0.00%     752.000us         0.01%       1.065ms      22.188us      48.000us         0.01%      48.000us       1.000us           0 b           0 b      24.00 Kb      24.00 Kb            48  \n",
-      "                                              aten::sin         0.00%     257.000us         0.00%     415.000us      25.938us      41.000us         0.01%      41.000us       2.562us           0 b           0 b       8.00 Kb       8.00 Kb            16  \n",
-      "                                              aten::cos         0.00%     248.000us         0.00%     401.000us      25.062us      42.000us         0.01%      42.000us       2.625us           0 b           0 b       8.00 Kb       8.00 Kb            16  \n",
-      "                                           aten::cumsum         1.38%     224.454ms         3.16%     516.068ms     184.376us       7.800ms         1.98%      11.370ms       4.062us           0 b           0 b     103.12 Mb       3.00 Kb          2799  \n",
-      "                                            aten::zeros         0.34%      54.840ms         0.73%     118.330ms      85.746us       0.000us         0.00%       2.047ms       1.483us          12 b           0 b     497.13 Mb           0 b          1380  \n",
-      "                                            aten::zero_         0.19%      31.258ms         0.31%      51.134ms      37.054us       0.000us         0.00%       2.047ms       1.483us           0 b           0 b           0 b           0 b          1380  \n",
-      "                                         INITIALIZATION         0.01%       2.172ms        35.68%        5.820s        5.820s       0.000us         0.00%       4.000us       4.000us          -4 b        -164 b       1.50 Kb           0 b             1  \n",
-      "                                     cudaGetDeviceCount         0.00%       1.000us         0.00%       1.000us       0.333us       0.000us         0.00%       0.000us       0.000us           0 b           0 b           0 b           0 b             3  \n",
-      "                                cudaGetDeviceProperties         0.06%       9.261ms         0.06%       9.261ms       3.087ms       0.000us         0.00%       0.000us       0.000us           0 b           0 b           0 b           0 b             3  \n",
-      "                                               aten::to         0.06%       9.935ms        35.92%        5.860s       1.832ms       0.000us         0.00%     448.000us       0.140us         416 b           0 b     147.50 Kb           0 b          3198  \n",
-      "                                         aten::_to_copy         0.09%      15.002ms        35.86%        5.850s      14.662ms       0.000us         0.00%     448.000us       1.123us         416 b           0 b     147.50 Kb           0 b           399  \n",
-      "                                  cudaStreamIsCapturing        35.23%        5.747s        35.23%        5.747s      53.714ms       0.000us         0.00%       0.000us       0.000us           0 b           0 b           0 b           0 b           107  \n",
-      "                                             cudaMalloc         8.31%        1.356s         8.31%        1.356s      10.848ms       0.000us         0.00%       0.000us       0.000us           0 b           0 b           0 b           0 b           125  \n",
-      "                                            aten::copy_         0.45%      73.043ms         0.88%     143.715ms      14.226us      14.196ms         3.61%      14.196ms       1.405us           0 b           0 b           0 b           0 b         10102  \n",
-      "                                        cudaMemcpyAsync         1.82%     296.577ms         1.82%     296.577ms      22.267us       0.000us         0.00%       0.000us       0.000us           0 b           0 b           0 b           0 b         13319  \n",
-      "                                  cudaStreamSynchronize         0.19%      31.005ms         0.19%      31.005ms       2.822us       0.000us         0.00%       0.000us       0.000us           0 b           0 b           0 b           0 b         10988  \n",
-      "                       Memcpy HtoD (Pageable -> Device)         0.00%       0.000us         0.00%       0.000us       0.000us       2.051ms         0.52%       2.051ms       1.405us           0 b           0 b           0 b           0 b          1460  \n",
-      "                                          aten::detach_         0.01%       1.324ms         0.01%       1.434ms      18.868us       0.000us         0.00%       0.000us       0.000us           0 b           0 b           0 b           0 b            76  \n",
-      "                                                detach_         0.00%     110.000us         0.00%     110.000us       1.447us       0.000us         0.00%       0.000us       0.000us           0 b           0 b           0 b           0 b            76  \n",
-      "                                              aten::max         0.94%     153.925ms         1.25%     203.354ms      71.128us      15.131ms         3.84%      15.131ms       5.292us           0 b           0 b       1.40 Mb           0 b          2859  \n",
-      "                                       aten::as_strided         0.19%      31.418ms         0.19%      31.418ms       1.290us       0.000us         0.00%       0.000us       0.000us           0 b           0 b           0 b           0 b         24348  \n",
-      "                                       cudaLaunchKernel         2.94%     479.033ms         2.94%     479.033ms       6.432us       0.000us         0.00%       0.000us       0.000us           0 b           0 b           0 b           0 b         74480  \n",
-      "void at::native::reduce_kernel<512, 1, at::native::R...         0.00%       0.000us         0.00%       0.000us       0.000us      14.257ms         3.62%      14.257ms       5.173us           0 b           0 b           0 b           0 b          2756  \n",
-      "                                             aten::item         1.23%     201.191ms         2.95%     481.837ms      49.273us       0.000us         0.00%      10.942ms       1.119us           0 b           0 b           0 b           0 b          9779  \n",
-      "                              aten::_local_scalar_dense         0.32%      52.561ms         1.72%     280.646ms      28.699us      10.942ms         2.78%      10.942ms       1.119us           0 b           0 b           0 b           0 b          9779  \n",
-      "                       Memcpy DtoH (Device -> Pageable)         0.00%       0.000us         0.00%       0.000us       0.000us      12.143ms         3.09%      12.143ms       1.129us           0 b           0 b           0 b           0 b         10753  \n",
-      "                                            aten::fill_         0.21%      34.752ms         0.40%      65.049ms      14.697us       5.412ms         1.38%       5.412ms       1.223us           0 b           0 b           0 b           0 b          4426  \n",
-      "-------------------------------------------------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  ------------  \n",
-      "Self CPU time total: 16.314s\n",
-      "Self CUDA time total: 393.569ms\n",
-      "\n"
-     ]
     }
    ],
    "source": [
@@ -136,7 +83,7 @@
     "    print(\"Runner initialization\")\n",
     "\n",
     "    tasks_per_gpu = 1\n",
-    "    gpus = range(1)\n",
+    "    gpus = [12]\n",
     "    executor = multi_GPU_executor(tasks_per_gpu = tasks_per_gpu, gpus = gpus)\n",
     "\n",
     "    runner = Runner(learner, executor = executor, shutdown_executor = True, retries = 2, goal = lambda l: l.npoints > 0)#l.loss() < 0.000001)\n",
