fixed hamiltonian dtype

--- a/adaptive_energy_gap.ipynb
+++ b/adaptive_energy_gap.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
    "source": [
     "import torch\n",
     "import numpy as np\n",
-    "from energy_gap import energy_gap\n",
+    "from energy_gap import energy_gap, energy_gap_2param_test\n",
     "from tools.device_setter import multi_GPU_executor\n",
     "\n",
     "from adaptive import notebook_extension, Runner, BlockingRunner, LearnerND, Learner2D\n",
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b586155070e4724b6675c21ea4a108f",
+       "model_id": "cee45823239247dc8950c8c623ef676e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -66,6 +66,232 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "33554432\n",
+      "67108864\n",
+      "1459627008\n",
+      "1616904192\n",
+      "1\n",
+      "33554432\n",
+      "100663296\n",
+      "1560290304\n",
+      "1650458624\n",
+      "2\n",
+      "33554432\n",
+      "134217728\n",
+      "1660953600\n",
+      "1684013056\n",
+      "3\n",
+      "33554432\n",
+      "167772160\n",
+      "1761616896\n",
+      "1784676352\n",
+      "4\n",
+      "33554432\n",
+      "201326592\n",
+      "1862280192\n",
+      "1885339648\n",
+      "5\n",
+      "33554432\n",
+      "234881024\n",
+      "1962943488\n",
+      "1986002944\n",
+      "6\n",
+      "33554432\n",
+      "268435456\n",
+      "2063606784\n",
+      "2086666240\n",
+      "7\n",
+      "33554432\n",
+      "301989888\n",
+      "2164270080\n",
+      "2187329536\n",
+      "8\n",
+      "33554432\n",
+      "335544320\n",
+      "2264933376\n",
+      "2287992832\n",
+      "9\n",
+      "33554432\n",
+      "369098752\n",
+      "2365596672\n",
+      "2388656128\n",
+      "10\n",
+      "33554432\n",
+      "402653184\n",
+      "2466259968\n",
+      "2489319424\n",
+      "11\n",
+      "33554432\n",
+      "436207616\n",
+      "2566923264\n",
+      "2589982720\n",
+      "12\n",
+      "33554432\n",
+      "469762048\n",
+      "2667586560\n",
+      "2690646016\n",
+      "13\n",
+      "33554432\n",
+      "503316480\n",
+      "2768249856\n",
+      "2791309312\n",
+      "14\n",
+      "33554432\n",
+      "536870912\n",
+      "2868913152\n",
+      "2891972608\n",
+      "15\n",
+      "33554432\n",
+      "570425344\n",
+      "2969576448\n",
+      "2992635904\n",
+      "16\n",
+      "33554432\n",
+      "603979776\n",
+      "3070239744\n",
+      "3093299200\n",
+      "17\n",
+      "33554432\n",
+      "637534208\n",
+      "3170903040\n",
+      "3193962496\n",
+      "18\n",
+      "33554432\n",
+      "671088640\n",
+      "3271566336\n",
+      "3294625792\n",
+      "19\n",
+      "33554432\n",
+      "704643072\n",
+      "3372229632\n",
+      "3395289088\n",
+      "20\n",
+      "33554432\n",
+      "738197504\n",
+      "3472892928\n",
+      "3495952384\n",
+      "21\n",
+      "33554432\n",
+      "771751936\n",
+      "3573556224\n",
+      "3596615680\n",
+      "0\n",
+      "33554432\n",
+      "67108864\n",
+      "4630535680\n",
+      "9892265984\n",
+      "1\n",
+      "33554432\n",
+      "100663296\n",
+      "4731198464\n",
+      "9386852352\n",
+      "2\n",
+      "33554432\n",
+      "134217728\n",
+      "4831862272\n",
+      "9386852352\n",
+      "3\n",
+      "33554432\n",
+      "167772160\n",
+      "4932525056\n",
+      "9386852352\n",
+      "4\n",
+      "33554432\n",
+      "201326592\n",
+      "5033188864\n",
+      "9386852352\n",
+      "5\n",
+      "33554432\n",
+      "234881024\n",
+      "5133851648\n",
+      "9386852352\n",
+      "6\n",
+      "33554432\n",
+      "268435456\n",
+      "5234515456\n",
+      "9925820416\n",
+      "7\n",
+      "33554432\n",
+      "301989888\n",
+      "5335178240\n",
+      "9992929280\n",
+      "8\n",
+      "33554432\n",
+      "335544320\n",
+      "5435841536\n",
+      "10060038144\n",
+      "9\n",
+      "33554432\n",
+      "369098752\n",
+      "5536504832\n",
+      "10496245760\n",
+      "10\n",
+      "33554432\n",
+      "402653184\n",
+      "5637168128\n",
+      "10194255872\n",
+      "11\n",
+      "33554432\n",
+      "436207616\n",
+      "5737831424\n",
+      "10697572352\n",
+      "12\n",
+      "33554432\n",
+      "469762048\n",
+      "5838494720\n",
+      "10798235648\n",
+      "13\n",
+      "33554432\n",
+      "503316480\n",
+      "5939158016\n",
+      "10898898944\n",
+      "14\n",
+      "33554432\n",
+      "536870912\n",
+      "6039821312\n",
+      "10999562240\n",
+      "15\n",
+      "33554432\n",
+      "570425344\n",
+      "6140484608\n",
+      "11100225536\n",
+      "16\n",
+      "33554432\n",
+      "603979776\n",
+      "6241147904\n",
+      "11200888832\n",
+      "17\n",
+      "33554432\n",
+      "637534208\n",
+      "6341811200\n",
+      "11301552128\n",
+      "18\n",
+      "33554432\n",
+      "671088640\n",
+      "6442474496\n",
+      "11402215424\n",
+      "19\n",
+      "33554432\n",
+      "704643072\n",
+      "6543137792\n",
+      "11502878720\n",
+      "20\n",
+      "33554432\n",
+      "738197504\n",
+      "6643801088\n",
+      "11603542016\n",
+      "21\n",
+      "33554432\n",
+      "771751936\n",
+      "6744464384\n",
+      "11704205312\n"
+     ]
     }
    ],
    "source": [
@@ -78,12 +304,12 @@
     "\n",
     "    print(\"Learner initialization\")\n",
     "    loss_function = curvature_loss_function()\n",
-    "    learner = LearnerND(energy_gap, bounds = [(0, 1), (-1, 1), (0.01, 1.25), (0.01, 1.25)], loss_per_simplex = loss_function)\n",
+    "    learner = LearnerND(energy_gap_2param_test, bounds = [(0, 1), (-1, 1), (0.01, 1.25), (0.01, 1.25)], loss_per_simplex = loss_function)\n",
     "    #learner = Learner2D(energy_gap, bounds = [(0, 1), (-1, 1)])\n",
     "    print(\"Runner initialization\")\n",
     "\n",
     "    tasks_per_gpu = 1\n",
-    "    gpus = [12]\n",
+    "    gpus = [13]\n",
     "    executor = multi_GPU_executor(tasks_per_gpu = tasks_per_gpu, gpus = gpus)\n",
     "\n",
     "    runner = Runner(learner, executor = executor, shutdown_executor = True, retries = 2, goal = lambda l: l.npoints > 0)#l.loss() < 0.000001)\n",
@@ -100,7 +326,8 @@
     "    #from gpu_profiler import gpu_profile\n",
     "    #sys.settrace(gpu_profile)\n",
     "    #with profile(activities = [ProfilerActivity.CPU, ProfilerActivity.CUDA], profile_memory = True, record_shapes = True, with_stack = True) as prof:\n",
-    "    runner, learner = main()"
+    "    runner, learner = main()\n",
+    "    print(\"Done\")"
    ]
   },
   {
