code ready for sweep

--- a/adaptive_energy_gap.ipynb
+++ b/adaptive_energy_gap.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cee45823239247dc8950c8c623ef676e",
+       "model_id": "d883ebd3d0804492b39f2a1bf4ce400f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,6 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Done\n",
       "0\n",
       "33554432\n",
       "67108864\n",
