--- a/sweep_4d.ipynb
+++ b/sweep_4d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "845fe681b9244d9cb4648fe830042e76",
+       "model_id": "99a4ce3c1bdc456b963131df287bf70b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -86,11 +86,11 @@
     "    print(\"Runner initialization\")\n",
     "\n",
     "    tasks_per_gpu = 1\n",
-    "    gpus = range(14,16)\n",
+    "    gpus = range(1,16)\n",
     "    executor = multi_GPU_executor(tasks_per_gpu = tasks_per_gpu, gpus = gpus)\n",
     "\n",
     "    runner = Runner(learner, executor = executor, shutdown_executor = True, retries = 1000, goal = lambda l: l.loss() < 1e-12)\n",
-    "    runner.start_periodic_saving(save_kwargs=dict(fname = \"data/sweep/saving.pickle\"), interval = 60)\n",
+    "    runner.start_periodic_saving(save_kwargs=dict(fname = \"data/sweep/saving.pickle\"), interval = 1800)\n",
     "    if type(runner) != BlockingRunner:\n",
     "        runner.live_info(update_interval = 1)\n",
     "\n",
@@ -101,24 +101,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback for <Task finished name='Task-5' coro=<AsyncRunner._run() done, defined at /opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py:636> exception=RuntimeError('An error occured while evaluating \"learner.function((0, -1, 0.2, 0.5))\". See the traceback for details.:\\n\\nconcurrent.futures.process._RemoteTraceback: \\n\"\"\"\\nTraceback (most recent call last):\\n  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/concurrent/futures/process.py\", line 243, in _process_worker\\n    r = call_item.fn(*call_item.args, **call_item.kwargs)\\n  File \"/home/mamelz/DSKY/DSKY-Differentiable-spin-chain-on-skyrmion/energy_gap.py\", line 57, in energy_gap\\n    h5file = h5py.File(path + \"eigvals_{}.hdf5\".format(os.environ[\"CUDA_VISIBLE_DEVICES\"]), \"a\")\\nUnboundLocalError: local variable \\'path\\' referenced before assignment\\n\"\"\"\\n\\nThe above exception was the direct cause of the following exception:\\n\\nTraceback (most recent call last):\\n  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 217, in _process_futures\\n    y = fut.result()\\nUnboundLocalError: local variable \\'path\\' referenced before assignment\\n')> (most recent call last):\n",
-      "RuntimeError: An error occured while evaluating \"learner.function((0, -1, 0.2, 0.5))\". See the traceback for details.:\n",
+      "Traceback for <Task finished name='Task-9' coro=<AsyncRunner._run() done, defined at /opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py:636> exception=RuntimeError('An error occured while evaluating \"learner.function((1, -1, 1.25, 3))\". See the traceback for details.:\\n\\nconcurrent.futures.process._RemoteTraceback: \\n\"\"\"\\nTraceback (most recent call last):\\n  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/concurrent/futures/process.py\", line 243, in _process_worker\\n    r = call_item.fn(*call_item.args, **call_item.kwargs)\\n  File \"/home/mamelz/DSKY/DSKY-Differentiable-spin-chain-on-skyrmion/energy_gap.py\", line 54, in energy_gap\\n    h5file = h5py.File(path + \"eigvals_{}.hdf5\".format(os.environ[\"CUDA_VISIBLE_DEVICES\"]), \"a\")\\nNameError: name \\'path\\' is not defined\\n\"\"\"\\n\\nThe above exception was the direct cause of the following exception:\\n\\nTraceback (most recent call last):\\n  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 217, in _process_futures\\n    y = fut.result()\\nNameError: name \\'path\\' is not defined\\n')> (most recent call last):\n",
+      "RuntimeError: An error occured while evaluating \"learner.function((1, -1, 1.25, 3))\". See the traceback for details.:\n",
       "\n",
       "concurrent.futures.process._RemoteTraceback: \n",
       "\"\"\"\n",
       "Traceback (most recent call last):\n",
       "  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/concurrent/futures/process.py\", line 243, in _process_worker\n",
       "    r = call_item.fn(*call_item.args, **call_item.kwargs)\n",
-      "  File \"/home/mamelz/DSKY/DSKY-Differentiable-spin-chain-on-skyrmion/energy_gap.py\", line 57, in energy_gap\n",
+      "  File \"/home/mamelz/DSKY/DSKY-Differentiable-spin-chain-on-skyrmion/energy_gap.py\", line 54, in energy_gap\n",
       "    h5file = h5py.File(path + \"eigvals_{}.hdf5\".format(os.environ[\"CUDA_VISIBLE_DEVICES\"]), \"a\")\n",
-      "UnboundLocalError: local variable 'path' referenced before assignment\n",
+      "NameError: name 'path' is not defined\n",
       "\"\"\"\n",
       "\n",
       "The above exception was the direct cause of the following exception:\n",
@@ -126,7 +126,7 @@
       "Traceback (most recent call last):\n",
       "  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 217, in _process_futures\n",
       "    y = fut.result()\n",
-      "UnboundLocalError: local variable 'path' referenced before assignment\n",
+      "NameError: name 'path' is not defined\n",
       "\n"
      ]
     },
