--- a/sweep_4d.ipynb
+++ b/sweep_4d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99a4ce3c1bdc456b963131df287bf70b",
+       "model_id": "520bcbb7a21f4f188462bd42dcf0a8c9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -80,9 +80,11 @@
     "    except:\n",
     "        pass\n",
     "\n",
+    "\n",
     "    print(\"Learner initialization\")\n",
     "    loss_function = curvature_loss_function()\n",
     "    learner = LearnerND(energy_gap, bounds = [(0, 1), (-1, 1), (0.2, 1.25), (0.5, 3)], loss_per_simplex = loss_function)\n",
+    "    learner.load(\"/home/mamelz/DSKY/DSKY-Differentiable-spin-chain-on-skyrmion/data/sweep/saving.pickle\")\n",
     "    print(\"Runner initialization\")\n",
     "\n",
     "    tasks_per_gpu = 1\n",
@@ -108,42 +110,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Traceback for <Task finished name='Task-9' coro=<AsyncRunner._run() done, defined at /opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py:636> exception=RuntimeError('An error occured while evaluating \"learner.function((1, -1, 1.25, 3))\". See the traceback for details.:\\n\\nconcurrent.futures.process._RemoteTraceback: \\n\"\"\"\\nTraceback (most recent call last):\\n  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/concurrent/futures/process.py\", line 243, in _process_worker\\n    r = call_item.fn(*call_item.args, **call_item.kwargs)\\n  File \"/home/mamelz/DSKY/DSKY-Differentiable-spin-chain-on-skyrmion/energy_gap.py\", line 54, in energy_gap\\n    h5file = h5py.File(path + \"eigvals_{}.hdf5\".format(os.environ[\"CUDA_VISIBLE_DEVICES\"]), \"a\")\\nNameError: name \\'path\\' is not defined\\n\"\"\"\\n\\nThe above exception was the direct cause of the following exception:\\n\\nTraceback (most recent call last):\\n  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 217, in _process_futures\\n    y = fut.result()\\nNameError: name \\'path\\' is not defined\\n')> (most recent call last):\n",
-      "RuntimeError: An error occured while evaluating \"learner.function((1, -1, 1.25, 3))\". See the traceback for details.:\n",
-      "\n",
-      "concurrent.futures.process._RemoteTraceback: \n",
-      "\"\"\"\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/concurrent/futures/process.py\", line 243, in _process_worker\n",
-      "    r = call_item.fn(*call_item.args, **call_item.kwargs)\n",
-      "  File \"/home/mamelz/DSKY/DSKY-Differentiable-spin-chain-on-skyrmion/energy_gap.py\", line 54, in energy_gap\n",
-      "    h5file = h5py.File(path + \"eigvals_{}.hdf5\".format(os.environ[\"CUDA_VISIBLE_DEVICES\"]), \"a\")\n",
-      "NameError: name 'path' is not defined\n",
-      "\"\"\"\n",
-      "\n",
-      "The above exception was the direct cause of the following exception:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 217, in _process_futures\n",
-      "    y = fut.result()\n",
-      "NameError: name 'path' is not defined\n",
-      "\n"
+      "Stack for <Task pending name='Task-6' coro=<AsyncRunner._run() running at /opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py:645> wait_for=<Future finished result=None>> (most recent call last):\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 590, in status\n",
-      "    return \"failed\"\n",
-      "  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 590, in status\n",
-      "    return \"failed\"\n",
-      "  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 653, in _run\n",
-      "    self._cleanup()\n",
-      "  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 225, in _process_futures\n",
-      "    self._do_raise(e, pid)\n",
-      "  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 163, in _do_raise\n",
-      "    raise RuntimeError(\n"
+      "  File \"/opt/anaconda/envs/ml_skyrmion11/lib/python3.9/site-packages/adaptive/runner.py\", line 645, in _run\n",
+      "    done, _ = await asyncio.wait(\n"
      ]
     }
    ],
